Fix cards alignment and make links clickable

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,11 @@ header {
     margin: 20px 0px;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 ul {
     display: flex;
     list-style-type: none;
@@ -76,10 +81,14 @@ ul {
     margin-bottom: 70px;
 }
 
+.second-section h2 {
+    margin-bottom: 50px;
+}
+
 .cards {
     display: flex;
     gap: 10px;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
